--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-money",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://myusername.github.io/finance_app_react",
+  "homepage": "https://JonasPalms.github.io/finance_app_react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
